src/test/deca/syntax/invalid/print_variable.deca
// Description:
//    On utilise le mot printcomme une variable
//
// Resultats:
//    Erreur du parser ligne 11
//
// Historique:
//    Cree le 09/01/2024

{
    int print = 3;
}
